tenant-b/gateways/waypoint-b.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/waypoint-for: service
  name: waypoint
  namespace: bookinfo-b
spec:
  gatewayClassName: istio-waypoint
  infrastructure:
    labels:
      mesh: tenant-b
    parametersRef:
      group: ""
      kind: ConfigMap
      name: waypoint-overrides
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
